[package]
authors = ["Greg Green <ggreen@bit-builder.com>"]
name = "slcan-parser"
edition = "2021"
version = "0.1.0"
description = "Serial CAN frame construction and parsing"
readme = "README.md"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/gpgreen/slcan-parser"
repository = "https://github.com/gpgreen/slcan-parser"
keywords = ["serial", "CAN", "parser"]
categories = ["embedded", "no-std"]

[dependencies]
embedded-hal = { version = "0.2.7", features = ["unproven"] }
machine = "0.3.0"
log = "0.4.21"
defmt = { version = "0.3", optional = true }

[dev-dependencies]
test-log = "0.2.11"
env_logger = "*"
heapless = "0.8"

[features]
defmt = ["dep:defmt"]